--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="hd-inr">
-      <h1>Painter</h1>
+      <h1><a href="#">Painter</a></h1>
       <h2>Free paint tool by javascript.</h2>
     </div>
   </header>
