add link at footer

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="">
+  <meta name="description" content="javascript drawing tool.">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="./css/reset.css">
@@ -13,14 +13,14 @@
   <header>
     <div class="hd-inr">
       <h1><a href="#">Painter</a></h1>
-      <h2>Free paint tool by javascript.</h2>
+      <h2>Free drawing tool by javascript.</h2>
     </div>
   </header>
   <main>
     <canvas id="drawingArea"></canvas>
   </main>
   <footer>
-    <small>&copy; Minaki All Rights Reserved.</small>
+    <small>&copy; <a href="">Minaki</a> All Rights Reserved.</small>
   </footer>
   <script src="js/draw.js"></script>
 </body>
