add link at footer

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <canvas id="drawingArea"></canvas>
   </main>
   <footer>
-    <small>&copy; <a href="">Minaki</a> All Rights Reserved.</small>
+    <small>&copy; <a href="https://github.com/Minaki-web">Minaki</a> All Rights Reserved.</small>
   </footer>
   <script src="js/draw.js"></script>
 </body>
