Revert "add link at footer"
This reverts commit 019232a8f27468f6ff0d32f1e137f5fb47324b10.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="./css/reset.css">
   <link rel="stylesheet" type="text/css" href="./css/style.css">
+  <script src="js/draw.js"></script>
   <title>Painter</title>
 </head>
 <body>
@@ -17,11 +18,10 @@
     </div>
   </header>
   <main>
-    <canvas id="drawingArea"></canvas>
+    <canvas id="drawingArea" width="" height="600"></canvas>
   </main>
   <footer>
     <small>&copy; <a href="https://github.com/Minaki-web">Minaki</a> All Rights Reserved.</small>
   </footer>
-  <script src="js/draw.js"></script>
 </body>
 </html>
