--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="./css/reset.css">
   <link rel="stylesheet" type="text/css" href="./css/style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="js/draw.js"></script>
   <title>Painter</title>
 </head>
@@ -18,7 +19,14 @@
     </div>
   </header>
   <main>
-    <canvas id="drawingArea" width="" height="600"></canvas>
+    <canvas id="drawingArea" width="" height="598"></canvas>
+    <div class="btn-container mt-20">
+      <button id="clear-btn" class="btn-big">クリア</button>
+      <button id="eraser-btn" class="btn-big">消しゴムにする</button>
+      <a id="download-btn" href="#" download="canvas.png">ダウンロード</a>
+      <div id="result"><img src=""></div>
+    </div>
+    <p class="size-change-alert mt-20">※途中でブラウザのサイズを変えると描いていたものが消えます。※<br>※PCのみで利用が出来ます。※</p>
   </main>
   <footer>
     <small>&copy; <a href="https://github.com/Minaki-web">Minaki</a> All Rights Reserved.</small>
