--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
       <button id="clear-btn" class="btn-big">クリア</button>
       <button id="eraser-btn" class="btn-big">消しゴムにする</button>
       <a id="download-btn" href="#" download="canvas.png">ダウンロード</a>
+      <select id="penColor">
+        <option value="black">BLACK</option>
+        <option value="red">RED</option>
+        <option value="blue">BLUE</option>
+        <option value="green">GREEN</option>
+      </select>
+      <select id="lineWidth">
+        <option value="3">細</option>
+        <option value="7" selected>中</option>
+        <option value="10">太</option>
+      </select>
       <div id="result"><img src=""></div>
     </div>
     <p class="size-change-alert mt-20">※途中でブラウザのサイズを変えると描いていたものが消えます。※<br>※PCのみで利用が出来ます。※</p>
