change value of lineWidth

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
       <select id="lineWidth">
         <option value="3">細</option>
         <option value="7" selected>中</option>
-        <option value="10">太</option>
+        <option value="12">太</option>
+        <option value="20">極太</option>
       </select>
       <div id="result"><img src=""></div>
     </div>
